--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
                     <li id = "colors">*Use many colors</li>
                     <li id = "uglyColors">Use unappealing colors</li>
                     <li id = "cluttered">Have a cluttered look</li>
-                    <li id="confusing">Use confusing  fonts  </li>
+                    <li id="confusing">Use confusing  fonts </li>
                  </ul>
             </div>
         </div>
     <footer>
-        <div class="col s6" id = "tiny">* - scroll over</div>
+        <div class="col s6" id = "tiny">* scroll over</div>
     </footer>
     </body>
 </html>
